Fix warnings found by compiling with -Wformat in open source clang-17 https://bugs.webkit.org/show_bug.cgi?id=267207 <rdar://120610377>

Reviewed by Timothy Hatcher.

The root cause of these issues was using a printf placeholder of "%d"
or "%hhu" with an enum value.  The solution is to wrap the enum value in
WTF::enumToUnderlyingType() to convert it to its underlying type.

In some cases, the enum itself is converted to an enum class with a
specific type, which is usually uint8_t.

* Source/WebCore/Modules/mediastream/PeerConnectionBackend.cpp:
(WebCore::PeerConnectionBackend::addIceCandidate):
* Source/WebCore/Modules/mediastream/RTCRtpSFrameTransform.cpp:
(WebCore::processFrame):
* Source/WebCore/Modules/mediastream/RTCRtpSFrameTransformer.h:
(WebCore::RTCRtpSFrameTransformer::CompatibilityMode):
(WebCore::RTCRtpSFrameTransformer::Error):
- Specify enum class type of uint8_t.
* Source/WebCore/loader/FrameLoader.cpp:
(WebCore::FrameLoader::handleLoadFailureRecovery):
* Source/WebCore/platform/graphics/cocoa/IOSurface.mm:
(WebCore::IOSurface::IOSurface):
* Source/WebCore/platform/mediarecorder/cocoa/VideoSampleBufferCompressor.h:
(WebCore::VideoSampleBufferCompressor::Profile):
- Specify enum class type of uint8_t.
* Source/WebCore/platform/mediarecorder/cocoa/VideoSampleBufferCompressor.mm:
(WebCore::VideoSampleBufferCompressor::initCompressionSession):
* Source/WebCore/workers/service/ServiceWorker.cpp:
(WebCore::ServiceWorker::ServiceWorker):
(WebCore::ServiceWorker::updateState):
* Source/WebCore/workers/service/server/SWServer.cpp:
(WebCore::SWServer::fireFunctionalEvent):
* Source/WebKit/UIProcess/API/ios/WKWebViewIOS.mm:
(-[WKWebView _trackTransactionCommit:]):
(-[WKWebView _didCommitLayerTree:]):
(-[WKWebView _updateVisibleContentRects]):
(-[WKWebView _cancelAnimatedResize]):
(-[WKWebView _endAnimatedResize]):
* Source/WebKit/UIProcess/Extensions/Cocoa/API/WebExtensionContextAPIEventCocoa.mm:
(WebKit::WebExtensionContext::addListener):
(WebKit::WebExtensionContext::removeListener):
* Source/WebKit/UIProcess/Network/NetworkProcessProxyCocoa.mm:
(WebKit::NetworkProcessProxy::sendXPCEndpointToProcess):
* Source/WebKit/WebProcess/Network/webrtc/LibWebRTCNetworkManager.cpp:
(WebKit::LibWebRTCNetworkManager::CreateNameForAddress):
* Source/WebKitLegacy/mac/WebCoreSupport/WebFrameLoaderClient.mm:
(-[WebFramePolicyListener dealloc]):

Canonical link: https://commits.webkit.org/272748@main