Source/WebKit/WebProcess/Network/webrtc/LibWebRTCNetworkManager.cpp
@@ -33,6 +33,7 @@
 #include "WebProcess.h"
 #include <WebCore/Document.h>
 #include <WebCore/LibWebRTCUtils.h>
+#include <wtf/EnumTraits.h>
 
 namespace WebKit {
 using namespace WebCore;
@@ -192,7 +193,7 @@ void LibWebRTCNetworkManager::CreateNameForAddress(const rtc::IPAddress& address
 
         WebProcess::singleton().libWebRTCNetwork().mdnsRegister().registerMDNSName(weakThis->m_documentIdentifier, fromStdString(address.ToString()), [address, callback = std::move(callback)](auto name, auto error) mutable {
             WebCore::LibWebRTCProvider::callOnWebRTCNetworkThread([address, callback = std::move(callback), name = WTFMove(name).isolatedCopy(), error] {
-                RELEASE_LOG_ERROR_IF(error, WebRTC, "MDNS registration of a host candidate failed with error %hhu", *error);
+                RELEASE_LOG_ERROR_IF(error, WebRTC, "MDNS registration of a host candidate failed with error %hhu", enumToUnderlyingType(*error));
                 // In case of error, we provide the name to let gathering complete.
                 callback(address, name.utf8().data());
             });
